<resources>
    <string name="app_name">Mov-06-Codefest-2016</string>
    <string name="bienvenida">Retos Everis Codefest 2016</string>
    <string name="calcular">Calcular</string>

    <string name="pidedatosreto1">Introduce las posiciones de los medicamentos separados por comas: </string>


    <string name="explicacionreto2">Introduce el las días,horas, minutos y segundos en los diferentes cuadros</string>
    <string name="dias">Días: </string>
    <string name="horas">Horas: </string>
    <string name="minutos">Minutos: </string>
    <string name="segundos">Segundos: </string>
    <string name="errorReto2">Error, has introducido un dato no válido</string>
    <string name="errorReto2Vacio">Error, has introducido un dato vacío</string>


    <string name="explicacionReto3">Introduce el número para hallar los números enteros que se puedan obtener
    sumando 5 o multiplicando por 3</string>
    <string name="errrorReto3Vacio">Error, campo vacío</string>

    <string name="peso">Peso: </string>
    <string name="precio">Precio: </string>
    <string name="pesoParametro">Peso: %1$f</string>
    <string name="precioParametro">Precio: %1$f</string>
    <string name="borrar">Borrar Ultimo</string>

    <string name="origen">Ciudad de Origen</string>
    <string name="destino">Ciudad de Destino</string>
    <string name="almacenesParametro">CantidadAlmacenes: %1$d</string>
</resources>
