<!--Importante lo del scroll, nos permite poner tantos elementos como queramos-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.iesnervion.fjruiz.mov_06_codefest_2016.reto4.Reto4">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblPeso"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24sp"
                android:text="@string/peso"
                android:textColor="#000000"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/lblPrecio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24sp"
                android:text="@string/precio"
                android:textColor="#000000"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/listaPeso"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000"/>
            <TextView
                android:id="@+id/listaPrecio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/txtPeso"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/txtPrecio"
                android:inputType="numberDecimal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:textSize="20sp"/>
            <Button
                android:id="@+id/añadir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Añadir"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/resultadoPeso"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24sp"
                android:textSize="20sp"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/resultadoPrecio"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="24sp"
                android:textSize="20sp"
                android:textColor="#000000"/>
        </LinearLayout>
            <LinearLayout android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/borrarUltimo"
                    android:layout_width="0sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/borrar" />
                <Button
                    android:id="@+id/calcularMochila"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/calcular"/>
            </LinearLayout>
        </LinearLayout>
</ScrollView>
